chore: update CI/CD workflows and gitignore
- Removed the Hugo deployment workflow as part of a shift in deployment strategy.
- Introduced a new workflow for PR review using GPTScript to enhance the code review process with AI capabilities.
- Updated .gitignore to exclude prompt-related files, aligning with new automation practices.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ node_modules/
 # Generated CSS and JSON files
 resources/_gen/assets/ananke/css/main.css_*
 resources/_gen/assets/ananke/css/main.css_*.json
+
+prompts/
