chore: update markdown linting rules in GitHub Actions
Increased the maximum line length to 500 to accommodate longer lines in markdown files. Added a rule to allow duplicate headers only among siblings, improving flexibility in document structure.

--- a/.github/workflows/markdown-lint.yml
+++ b/.github/workflows/markdown-lint.yml
@@ -30,14 +30,17 @@ jobs:
         {
           "default": true,
           "MD013": {
-            "line_length": 120,
+            "line_length": 500,
             "code_blocks": false,
             "tables": false
           },
           "MD033": {
             "allowed_elements": ["br", "img", "a", "div", "span", "details", "summary"]
           },
-          "MD041": false
+          "MD041": false,
+          "MD024": {
+            "siblings_only": true
+          }
         }
         EOF
         
