chore: integrate design system for enhanced styling
Added a new design system CSS file and updated the configuration to include it. This change aims to improve visual consistency and provide a flexible styling framework for the project.

--- a/hugo.toml
+++ b/hugo.toml
@@ -6,3 +6,4 @@ theme = "gohugo-theme-ananke"
 [params]
     github = "https://github.com/HiteshRepo"
     linkedin = "https://www.linkedin.com/in/hitesh-pattanayak/"
+    custom_css = ["styles/design-system.css"]
