--- a/hugo.production.toml
+++ b/hugo.production.toml
@@ -1,13 +1,21 @@
 baseURL = 'https://hitesh-pattanayak.netlify.app/'
 languageCode = 'en-us'
 title = 'Hitesh Pattanayak'
+author = 'Hitesh Pattanayak'
 theme = "gohugo-theme-ananke"
 
 [params]
-    github = "https://github.com/HiteshRepo"
-    linkedin = "https://www.linkedin.com/in/hitesh-pattanayak/"
-    custom_css = ["styles/design-system.css"]
+pagetitle = "Hitesh Pattanayak"
+copyright = "© 2024 Hitesh Pattanayak"
+copyrightUrl = "https://hitesh-pattanayak.netlify.app/"
+faviconfile = "image/favicon.png"
+logofile = "image/avatar.png"
+posts_navigation = true
+uselatex = true
+highlightjs = true
+progressively = false
+github = "https://github.com/HiteshRepo"
+linkedin = "https://www.linkedin.com/in/hitesh-pattanayak/"
+custom_css = ["styles/design-system.css"]
 
-[services]
-  [services.googleAnalytics]
-    id = 'G-SSRQWT3E10'
+googleAnalytics ='G-SSRQWT3E10'
