cleans up low impact blogs

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,7 @@ node_modules/
 resources/_gen/assets/ananke/css/main.css_*
 resources/_gen/assets/ananke/css/main.css_*.json
 
+# Archive directory for removed content
+archive/
+
 prompts/
