--- a/hugo.production.toml
+++ b/hugo.production.toml
@@ -10,6 +10,11 @@ url = "/posts/"
 weight = 10
 
 [[menu.main]]
+name = "Projects"
+url = "/projects/"
+weight = 15
+
+[[menu.main]]
 name = "About"
 url = "/about/"
 weight = 20
