--- a/hugo.toml
+++ b/hugo.toml
@@ -23,3 +23,4 @@ github = "https://github.com/HiteshRepo"
 linkedin = "https://www.linkedin.com/in/hitesh-pattanayak/"
 show_reading_time = false
 recent_posts_number = 0
+site_logo = "HP"
